--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "version": "0.1.2",
+  "version": "0.1.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -61,6 +61,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-email/render": "^1.0.5",
+    "@repo/ui": "*",
     "@stencil/core": "^4.24.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/react-beautiful-dnd": "^13.1.8",
@@ -84,6 +85,7 @@
     "crypto-js": "^4.2.0",
     "csrf": "^3.1.0",
     "css-loader": "^7.1.2",
+    "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "ecpair": "^3.0.0-rc.0",
     "express": "^4.19.2",
@@ -101,6 +103,7 @@
     "lucide-react": "^0.469.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.8.3",
+    "next": "^15.4.2",
     "next-auth": "^5.0.0-beta.25",
     "next-connect": "^1.0.0",
     "next-intl": "^3.26.3",
@@ -111,6 +114,8 @@
     "prisma": "^5.19.1",
     "punycode": "^2.3.1",
     "qrcode.react": "^4.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.4.0",
     "react-to-print": "^3.0.5",
@@ -125,40 +130,33 @@
     "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7",
     "yup": "^1.4.0",
-    "zod": "^3.23.8",
-    "@repo/ui": "*",
-    "next": "^15.4.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@repo/eslint-config": "*",
+    "@repo/typescript-config": "*",
     "@types/cookie-parser": "^1.4.7",
     "@types/crypto-js": "^4.2.2",
     "@types/formidable": "^3.4.5",
     "@types/js-cookie": "^3.0.6",
     "@types/minimatch": "^6.0.0",
+    "@types/node": "^22.15.3",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
     "@types/tailwindcss": "^3.1.0",
     "@types/web-push": "^3.6.4",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
+    "eslint": "^9.31.0",
     "eslint-config-next": "^15.1.3",
     "postcss": "^8.4.49",
     "postcss-nesting": "^13.0.1",
     "prisma": "^4.0.0",
     "ts-node": "^10.9.2",
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "@types/node": "^22.15.3",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
-    "eslint": "^9.31.0",
     "typescript": "5.8.2"
   },
   "overrides": {
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
-  },
-  "engines": {
-    "node": ">=20.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
