--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,121 @@
     "@repo/ui": "*",
     "next": "^15.4.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@aws-sdk/client-amplify": "^3.699.0",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/client-ses": "^3.637.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@bitcoinerlab/secp256k1": "^1.1.1",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/cli": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/filesystem": "^7.0.0",
+    "@capacitor/ios": "^7.2.0",
+    "@capacitor/preferences": "^7.0.0",
+    "@capacitor/status-bar": "^7.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.1.1",
+    "@heroicons/react": "^2.1.4",
+    "@hookform/resolvers": "^3.9.0",
+    "@next/bundle-analyzer": "^15.1.7",
+    "@octokit/rest": "^21.0.2",
+    "@paystack/inline-js": "^2.22.7",
+    "@prisma/client": "^5.19.1",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/render": "^1.0.5",
+    "@stencil/core": "^4.24.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/sqlite3": "^3.1.11",
+    "@vercel/blob": "^1.1.1",
+    "@vercel/functions": "^1.5.2",
+    "@vercel/postgres": "^0.9.0",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.4",
+    "bcryptjs": "^3.0.2",
+    "bignumber.js": "^9.1.2",
+    "bip32": "^5.0.0-rc.0",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^7.0.0-rc.0",
+    "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "csrf": "^3.1.0",
+    "css-loader": "^7.1.2",
+    "dexie": "^4.0.11",
+    "ecpair": "^3.0.0-rc.0",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
+    "firebase": "^12.0.0",
+    "firebase-admin": "^13.2.0",
+    "formidable": "^3.5.2",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.13.1",
+    "html2canvas": "^1.4.1",
+    "isomorphic-dompurify": "^2.21.0",
+    "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.0",
+    "juice": "^11.0.0",
+    "lucide-react": "^0.469.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.8.3",
+    "next-auth": "^5.0.0-beta.25",
+    "next-connect": "^1.0.0",
+    "next-intl": "^3.26.3",
+    "next-pwa": "^5.6.0",
+    "next-transpile-modules": "^10.0.1",
+    "openai": "^4.77.0",
+    "postcss-loader": "^8.1.1",
+    "prisma": "^5.19.1",
+    "punycode": "^2.3.1",
+    "qrcode.react": "^4.1.0",
+    "react-hook-form": "^7.52.2",
+    "react-icons": "^5.4.0",
+    "react-to-print": "^3.0.5",
+    "slugify": "^1.6.6",
+    "sonner": "^2.0.1",
+    "sqlite": "^5.1.1",
+    "style-loader": "^4.0.0",
+    "suneditor": "^2.46.3",
+    "suneditor-react": "^3.6.1",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "web-push": "^3.6.7",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
@@ -23,6 +137,20 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.31.0",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/crypto-js": "^4.2.2",
+    "@types/formidable": "^3.4.5",
+    "@types/js-cookie": "^3.0.6",
+    "@types/minimatch": "^6.0.0",
+    "@types/tailwindcss": "^3.1.0",
+    "@types/web-push": "^3.6.4",
+    "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
+    "eslint-config-next": "^15.1.3",
+    "postcss": "^8.4.49",
+    "postcss-nesting": "^13.0.1",
+    "prisma": "^4.0.0",
+    "ts-node": "^10.9.2"
   }
 }
