--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -151,6 +151,7 @@
     "postcss-nesting": "^13.0.1",
     "prisma": "^4.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "@next/eslint-plugin-next": "^14.0.0"
   }
 }
